added favourite counts

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                         <a href="#">
                             <div>
                                 <div>
-                                    <img src="assets/favourites-icon.png" alt="favourites">
+                                    <img src="assets/favourites-icon-unclick.png" alt="favourites">
+                                    <div style="position: fixed;background-color: #ee0652;width: 18px;height: 18px;border-radius: 50%;margin-left: 20px;margin-bottom: 20px;display: flex;justify-content: center;"><p><span class="js-favourites-count" style="color: white;">0</span></p></div>
                                 </div>
                             </div>
                         </a>
@@ -248,7 +249,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding-top: 7vh;padding-bottom: 5vh;text-align: center;"><h3 style="font-weight: 500;color: rgb(64, 64, 226);text-decoration: underline;"><a href="#" style="cursor: pointer;color: rgb(64, 64, 226);">Explore All</a></h3></div>
+                <div style="padding-top: 7vh;padding-bottom: 5vh;text-align: center;"><h3 style="font-weight: 500;color: rgb(64, 64, 226);text-decoration: underline;"><a href="./product_pages/tees.html" style="cursor: pointer;color: rgb(64, 64, 226);">Explore All</a></h3></div>
                 <h1 style="text-align: center;padding: 10px;">BROWSE CARGOS</h1>
                 <div class="browsing-section">
                     <div class="browsing-section-tees">
