--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/x-icon" href="assets/logo1.png">
+    <script src="./data/products.js"></script>
     <script src="index.js"></script>
 </head>
 <body>
@@ -249,7 +250,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding-top: 7vh;padding-bottom: 5vh;text-align: center;"><h3 style="font-weight: 500;color: rgb(64, 64, 226);text-decoration: underline;"><a href="./product_pages/tees.html" style="cursor: pointer;color: rgb(64, 64, 226);">Explore All</a></h3></div>
+                <div style="padding-top: 7vh;padding-bottom: 5vh;text-align: center;"><h3 style="font-weight: 500;color: rgb(64, 64, 226);text-decoration: underline;"><a href="./product_pages/productsPage.html" style="cursor: pointer;color: rgb(64, 64, 226);" onclick="localStorage.setItem('product_type',JSON.stringify(tees))">Explore All</a></h3></div>
                 <h1 style="text-align: center;padding: 10px;">BROWSE CARGOS</h1>
                 <div class="browsing-section">
                     <div class="browsing-section-tees">
@@ -317,7 +318,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding-top: 7vh;padding-bottom: 5vh;text-align: center;"><h3 style="font-weight: 500;color: rgb(64, 64, 226);text-decoration: underline;"><a href="#" style="cursor: pointer;color: rgb(64, 64, 226);">Explore All</a></h3></div>
+                <div style="padding-top: 7vh;padding-bottom: 5vh;text-align: center;"><h3 style="font-weight: 500;color: rgb(64, 64, 226);text-decoration: underline;"><a href="./product_pages/productsPage.html" style="cursor: pointer;color: rgb(64, 64, 226);" onclick="localStorage.setItem('product_type',JSON.stringify(cargos))">Explore All</a></h3></div>
                 <h1 style="text-align: center;padding: 10px;">BROWSE HOODIES</h1>
                 <div class="browsing-section">
                     <div class="browsing-section-tees">
@@ -385,7 +386,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding-top: 7vh;padding-bottom: 5vh;text-align: center;"><h3 style="font-weight: 500;color: rgb(64, 64, 226);text-decoration: underline;"><a href="#" style="cursor: pointer;color: rgb(64, 64, 226);">Explore All</a></h3></div>
+                <div style="padding-top: 7vh;padding-bottom: 5vh;text-align: center;"><h3 style="font-weight: 500;color: rgb(64, 64, 226);text-decoration: underline;"><a href="#" style="cursor: pointer;color: rgb(64, 64, 226);" onclick="localStorage.setItem('product_type','hoodies')">Explore All</a></h3></div>
                 <div class="login-to-access">
                     <div class="login-to-access-text">
                         <h1>LOGIN TO SEE YOUR DESIGNS</h1>
