--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             </div>
                         </div>
                     </a>
-                    <section style="width: 1px;height: 100%;background-color: black;">
+                    <!-- <section style="width: 1px;height: 100%;background-color: black;"> -->
                     </section>
                     <a href="login.html">
                         <div>
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                     </a>
-                    <section style="width: 1px;height: 100%;background-color: black;">
+                    <!-- <section style="width: 1px;height: 100%;background-color: black;"> -->
                     </section>
                     <!-- <a href="#">
                         <div>
@@ -70,7 +70,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="./favouritesPage/favPage.html">
                             <div>
                                 <div>
                                     <img src="assets/favourites-icon-unclick.png" alt="favourites">
@@ -386,7 +386,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding-top: 7vh;padding-bottom: 5vh;text-align: center;"><h3 style="font-weight: 500;color: rgb(64, 64, 226);text-decoration: underline;"><a href="#" style="cursor: pointer;color: rgb(64, 64, 226);" onclick="localStorage.setItem('product_type','hoodies')">Explore All</a></h3></div>
+                <div style="padding-top: 7vh;padding-bottom: 5vh;text-align: center;"><h3 style="font-weight: 500;color: rgb(64, 64, 226);text-decoration: underline;"><a href="./product_pages/productsPage.html" style="cursor: pointer;color: rgb(64, 64, 226);" onclick="localStorage.setItem('product_type',JSON.stringify(hoodies))">Explore All</a></h3></div>
                 <div class="login-to-access">
                     <div class="login-to-access-text">
                         <h1>LOGIN TO SEE YOUR DESIGNS</h1>
