--- a/product_pages/productsPage.html
+++ b/product_pages/productsPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tees-WTP</title>
+    <title class="js-product-type">Tees-WTP</title>
     <link href="https://fonts.googleapis.com/css2?family=Boldonse&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -42,8 +42,7 @@
                             </div>
                         </div>
                     </a>
-                    <section style="width: 1px;height: 100%;background-color: black;">
-                    </section>
+                    
                     <a href="login.html">
                         <div>
                             <div>
@@ -51,8 +50,7 @@
                             </div>
                         </div>
                     </a>
-                    <section style="width: 1px;height: 100%;background-color: black;">
-                    </section>
+                   
                     <!-- <a href="#">
                         <div>
                             <div>
@@ -69,7 +67,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="../favouritesPage/favPage.html">
                             <div>
                                 <div>
                                     <img src="../assets/favourites-icon-unclick.png" alt="favourites">
@@ -90,14 +88,14 @@
             <nav class="nav-drop-down">
                 <ul>
                     <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                        <a href="#">
+                        <a href="./productsPage.html" onclick="localStorage.setItem('product_type',JSON.stringify(tees))">
                             <div>
                                 T-Shirts
                             </div>
                         </a>
                     </li>
                     <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                        <a href="#">
+                        <a href="./productsPage.html" onclick="localStorage.setItem('product_type',JSON.stringify(hoodies))">
                             <div>
                                 Hoodies
                             </div>
@@ -149,8 +147,8 @@
             </div>
         </div>
     </div>
-    <script src="products-render.js"></script>
     <script src="../data/products.js"></script>
+    <script src="./products-render.js"></script>
     <script>
         window.addEventListener("load", function() {
             document.querySelector(".loader-wrapper").style.display = "none";
@@ -162,7 +160,10 @@
         function blackscreenout(){
             document.getElementById("main").style.opacity=1;
         }
-        renderProducts(JSON.parse(localStorage.getItem('product_type'))||tees);
+        console.log("saa");
+        if(!localStorage.getItem('product_type')){
+            localStorage.setItem('product_type',JSON.stringify(tees));
+        }
     </script>
 </body>
 </html>
