--- a/cart/cart.html
+++ b/cart/cart.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WTUSER-Favourites</title>
+    <title>Cart</title>
     <link href="https://fonts.googleapis.com/css2?family=Boldonse&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../index.css">
-    <link rel="stylesheet" href="./favPage.css">
+    <link rel="stylesheet" href="../favouritesPage/favPage.css">
     <link rel="stylesheet" href="../product_pages/products-render.css">
+    <link rel="stylesheet" href="./cart.css">
 </head>
 <body>
     <div class="loader-wrapper">
@@ -19,7 +20,7 @@
             <span class="loader-inner"><span>WTPRINTS<div class="loader-in-line"></div></span></span>
         </div>
     </div>
-    <header class="navtotal">
+    <header class="navtotal" style="height: 70px;">
         <div class="navbar">
             <a href="../index.html">
                 <div class="nav-logo">
@@ -51,14 +52,14 @@
                     </div>
                 </a> -->
                 <div class="nav-icons">
-                    <a href="../cart/cart.html">
-                        <div>
+                    <a href="../favouritesPage/favPage.html">
                             <div>
-                                <img src="../assets/cart-icon.png" alt="cart">
-                                <div style="position: fixed;background-color: #ee0652;width: 18px;height: 18px;border-radius: 50%;margin-left: 20px;margin-bottom: 20px;display: flex;justify-content: center;"><p><span class="js-cart-count" style="color: white;">0</span></p></div>
+                                <div>
+                                    <img src="../assets/favourites-icon-unclick.png" alt="favourites">
+                                    <div style="position: fixed;background-color: #ee0652;width: 18px;height: 18px;border-radius: 50%;margin-left: 20px;margin-bottom: 20px;display: flex;justify-content: center;"><p><span class="js-favourites-count" style="color: white;">0</span></p></div>
+                                </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
                     <a href="#">
                         <div>
                             <div index="three-dots" onmouseover=blackscreen() on onmouseleave=blackscreenout()>
@@ -69,64 +70,18 @@
                 </div>
             </div>
         </div>
-        <nav class="nav-drop-down">
-            <ul>
-                <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                    <a href="./productsPage.html" onclick="localStorage.setItem('product_type',JSON.stringify(tees))">
-                        <div>
-                            T-Shirts
-                        </div>
-                    </a>
-                </li>
-                <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                    <a href="./productsPage.html" onclick="localStorage.setItem('product_type',JSON.stringify(hoodies))">
-                        <div>
-                            Hoodies
-                        </div>
-                    </a>
-                </li>
-                <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                    <a href="#">
-                        <div>
-                            Lower
-                        </div>
-                    </a>
-                </li>
-                <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                    <a href="#">
-                        <div>
-                            Bags
-                        </div>
-                    </a>
-                </li>
-                <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                    <a href="#">
-                        <div>
-                            Caps
-                        </div>
-                    </a>
-                </li>
-                <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                    <a href="#">
-                        <div>
-                            Visiting Cards
-                        </div>
-                    </a>
-                </li>
-                <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                    <a href="#">
-                        <div>
-                            Others
-                        </div>
-                    </a>
-                </li>
-            </ul>
-        </nav>
     </header>
-    <div class="new-body filter-blur js-favourites-body" id="main">
-        
+    <div class="new-body js-cart-body filter-blur" id="main">
+        <div class="cart-body" style="width: 70%;">
+            <div class="cart-render">
+
+            </div>
+        </div>
+        <div class="cart-checkout" style="width: 30%;">
+            v
+        </div>
     </div>
-    <script src="favProducts.js"></script>
+    <script src="./cart.js"></script>
     <script>
         window.addEventListener("load", function() {
             document.querySelector(".loader-wrapper").style.display = "none";
