--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                         <a href="#">
                             <div>
                                 <div>
-                                    <img src="assets/cart-icon.png" alt="cart">
+                                    <img src="../assets/cart-icon.png" alt="cart">
+                                    <div style="position: fixed;background-color: #ee0652;width: 18px;height: 18px;border-radius: 50%;margin-left: 20px;margin-bottom: 20px;display: flex;justify-content: center;"><p><span class="js-cart-count" style="color: white;">0</span></p></div>
                                 </div>
                             </div>
                         </a>
