--- a/product_pages/productsPage.html
+++ b/product_pages/productsPage.html
@@ -43,7 +43,7 @@
                         </div>
                     </a>
                     
-                    <a href="login.html">
+                    <a href="../login.html">
                         <div>
                             <div>
                                 <p style="font-size: large;">Sign in/up</p>
@@ -59,7 +59,7 @@
                         </div>
                     </a> -->
                     <div class="nav-icons">
-                        <a href="#">
+                        <a href="../cart/cart.html">
                             <div>
                                 <div>
                                     <img src="../assets/cart-icon.png" alt="cart">
