--- a/cart/cart.html
+++ b/cart/cart.html
@@ -28,7 +28,7 @@
                 </div>
             </a>
             <div class="nav-components">
-                <a href="login.html">
+                <a href="../login.html">
                     <div>
                         <div>
                             <p style="font-size: large;">My Designs</p>
@@ -36,7 +36,7 @@
                     </div>
                 </a>
                 
-                <a href="login.html">
+                <a href="../login.html">
                     <div>
                         <div>
                             <p style="font-size: large;">Sign in/up</p>
