--- a/product_pages/productsPage.html
+++ b/product_pages/productsPage.html
@@ -43,10 +43,10 @@
                         </div>
                     </a>
                     
-                    <a href="../login.html">
+                    <a href="login.html" class="login-token">
                         <div>
                             <div>
-                                <p style="font-size: large;">Sign in/up</p>
+                                <p style="font-size: large;" class="login-token-info">Sign in/up</p>
                             </div>
                         </div>
                     </a>
