--- a/product_pages/productsPage.html
+++ b/product_pages/productsPage.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div class="nav-components">
-                    <a href="login.html">
+                    <a href="../login.html">
                         <div>
                             <div>
                                 <p style="font-size: large;">My Designs</p>
@@ -43,7 +43,7 @@
                         </div>
                     </a>
                     
-                    <a href="login.html" class="login-token">
+                    <a href="../login.html" class="login-token">
                         <div>
                             <div>
                                 <p style="font-size: large;" class="login-token-info">Sign in/up</p>
