--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="slide-wrapper">
                     <div class="slides">
                         <a href="#"><img src="assets/OversizeT.jpg" alt="OversizeT" id="slide-1" class="slide"></a>
-                        <a href="#"><img src="assets/Cargo.jpg" alt="Cargo" id="slide-2" class="slide"></a>
+                        <a href="#"><img src="assets/cargo.jpg" alt="Cargo" id="slide-2" class="slide"></a>
                         <a href="#"><img src="assets/Joggers.jpg" alt="Joggers" id="slide-3" class="slide"></a>
                         <a href="#"><img src="assets/Tshirt.jpg" alt="Tshirt" id="slide-4" class="slide"></a>
                         <a href="#"><img src="assets/Jeans.jpg" alt="Jeans" id="slide-5" class="slide"></a>
