--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             console.error('❌ DATABASE NOT CONNECTED!');
             }
         } catch (error) {
-            console.error('❌ Backend not reachable:', JSON.parse(error));
+            console.error('❌ Backend not reachable:', error);
         }
         }
 
