--- a/favouritesPage/favPage.html
+++ b/favouritesPage/favPage.html
@@ -35,10 +35,10 @@
                     </div>
                 </a>
                 
-                <a href="login.html">
+                <a href="../login.html" class="login-token">
                     <div>
                         <div>
-                            <p style="font-size: large;">Sign in/up</p>
+                            <p style="font-size: large;" class="login-token-info">Sign in/up</p>
                         </div>
                     </div>
                 </a>
@@ -72,49 +72,49 @@
         <nav class="nav-drop-down">
             <ul>
                 <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                    <a href="./productsPage.html" onclick="localStorage.setItem('product_type',JSON.stringify(tees))">
+                    <a href="../product_pages/productsPage.html" onclick="localStorage.setItem('product_type',JSON.stringify(tees))">
                         <div>
                             T-Shirts
                         </div>
                     </a>
                 </li>
                 <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                    <a href="./productsPage.html" onclick="localStorage.setItem('product_type',JSON.stringify(hoodies))">
+                    <a href="../product_pages/productsPage.html" onclick="localStorage.setItem('product_type',JSON.stringify(hoodies))">
                         <div>
                             Hoodies
                         </div>
                     </a>
                 </li>
                 <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                    <a href="#">
+                    <a href="../product_pages/productsPage.html" onclick="localStorage.setItem('product_type',JSON.stringify(cargoes))">
                         <div>
                             Lower
                         </div>
                     </a>
                 </li>
                 <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                    <a href="#">
+                    <a href="../soon.html">
                         <div>
                             Bags
                         </div>
                     </a>
                 </li>
                 <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                    <a href="#">
+                    <a href="../soon.html">
                         <div>
                             Caps
                         </div>
                     </a>
                 </li>
                 <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                    <a href="#">
+                    <a href="../soon.html">
                         <div>
                             Visiting Cards
                         </div>
                     </a>
                 </li>
                 <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                    <a href="#">
+                    <a href="../soon.html">
                         <div>
                             Others
                         </div>
