--- a/product_pages/productsPage.html
+++ b/product_pages/productsPage.html
@@ -102,35 +102,35 @@
                         </a>
                     </li>
                     <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                        <a href="#">
+                        <a href="./productsPage.html" onclick="localStorage.setItem('product_type',JSON.stringify(hoodies))">
                             <div>
                                 Lower
                             </div>
                         </a>
                     </li>
                     <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                        <a href="#">
+                        <a href="../soon.html">
                             <div>
                                 Bags
                             </div>
                         </a>
                     </li>
                     <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                        <a href="#">
+                        <a href="../soon.html">
                             <div>
                                 Caps
                             </div>
                         </a>
                     </li>
                     <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                        <a href="#">
+                        <a href="../soon.html">
                             <div>
                                 Visiting Cards
                             </div>
                         </a>
                     </li>
                     <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                        <a href="#">
+                        <a href="../soon.html">
                             <div>
                                 Others
                             </div>
