--- a/cart/cart.html
+++ b/cart/cart.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../favouritesPage/favPage.css">
     <link rel="stylesheet" href="../product_pages/products-render.css">
     <link rel="stylesheet" href="./cart.css">
+    <link rel="icon" type="image/x-icon" href="../assets/logo1.png">
 </head>
 <body>
     <div class="loader-wrapper">
