--- a/favouritesPage/favPage.html
+++ b/favouritesPage/favPage.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="./favPage.css">
     <link rel="stylesheet" href="../product_pages/products-render.css">
+    <link rel="icon" type="image/x-icon" href="../assets/logo1.png">
 </head>
 <body>
     <div class="loader-wrapper">
