--- a/product_pages/productsPage.html
+++ b/product_pages/productsPage.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="products-render.css">
+    <link rel="icon" type="image/x-icon" href="../assets/logo1.png">
+
 </head>
 <body>
     <div class="loader-wrapper">
@@ -102,7 +104,7 @@
                         </a>
                     </li>
                     <li onmouseover=blackscreen() on onmouseleave=blackscreenout()>
-                        <a href="./productsPage.html" onclick="localStorage.setItem('product_type',JSON.stringify(hoodies))">
+                        <a href="./productsPage.html" onclick="localStorage.setItem('product_type',JSON.stringify(cargos))">
                             <div>
                                 Lower
                             </div>
