--- a/product_pages/productsPage.html
+++ b/product_pages/productsPage.html
@@ -84,6 +84,11 @@
                                 </div>
                             </div>
                         </a>
+                        <div class="mobile-menu-toggle" onclick="toggleMobileMenu()">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
                     </div>
                 </div>
             </div>
